i made a rules page that explain the rules of the game

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       - "You lose!"
       - "It's a tie!"
     -->
+      <p><a href="rules.html">Rules</a> — How to play Rock Paper Scissors</p>
     <div class="top">
       <!-- Empty divs are used for spacing in the grid layout -->
       <div></div>
@@ -116,6 +117,7 @@
     </section>
 
   </main>
+    
 
   <!--
     Links the JavaScript file.
